contrib/python/pypdfium2/pypdfium2_raw/bindings.py


# ./fpdf_edit.h: 1394
FPDFTextObj_GetFontSize = _libs['pdfium']['FPDFTextObj_GetFontSize']
FPDFTextObj_GetFontSize.argtypes = (FPDF_PAGEOBJECT, POINTER(c_float))
FPDFTextObj_GetFontSize.restype = FPDF_BOOL

# ./fpdf_edit.h: 1399
FPDFFont_Close = _libs['pdfium']['FPDFFont_Close']
FPDFFont_Close.argtypes = (FPDF_FONT, )
FPDFFont_Close.restype = None

# ./fpdf_edit.h: 1409
FPDFPageObj_CreateTextObj = _libs['pdfium']['FPDFPageObj_CreateTextObj']
FPDFPageObj_CreateTextObj.argtypes = (FPDF_DOCUMENT, FPDF_FONT, c_float)
FPDFPageObj_CreateTextObj.restype = FPDF_PAGEOBJECT

# ./fpdf_edit.h: 1420
FPDFTextObj_GetTextRenderMode = _libs['pdfium']['FPDFTextObj_GetTextRenderMode']
FPDFTextObj_GetTextRenderMode.argtypes = (FPDF_PAGEOBJECT, )
FPDFTextObj_GetTextRenderMode.restype = FPDF_TEXT_RENDERMODE

# ./fpdf_edit.h: 1431
FPDFTextObj_SetTextRenderMode = _libs['pdfium']['FPDFTextObj_SetTextRenderMode']
FPDFTextObj_SetTextRenderMode.argtypes = (FPDF_PAGEOBJECT, FPDF_TEXT_RENDERMODE)
FPDFTextObj_SetTextRenderMode.restype = FPDF_BOOL

# ./fpdf_edit.h: 1448
FPDFTextObj_GetText = _libs['pdfium']['FPDFTextObj_GetText']
FPDFTextObj_GetText.argtypes = (FPDF_PAGEOBJECT, FPDF_TEXTPAGE, POINTER(FPDF_WCHAR), c_ulong)
FPDFTextObj_GetText.restype = c_ulong

# ./fpdf_edit.h: 1467
FPDFTextObj_GetRenderedBitmap = _libs['pdfium']['FPDFTextObj_GetRenderedBitmap']
FPDFTextObj_GetRenderedBitmap.argtypes = (FPDF_DOCUMENT, FPDF_PAGE, FPDF_PAGEOBJECT, c_float)
FPDFTextObj_GetRenderedBitmap.restype = FPDF_BITMAP

# ./fpdf_edit.h: 1478
FPDFTextObj_GetFont = _libs['pdfium']['FPDFTextObj_GetFont']
FPDFTextObj_GetFont.argtypes = (FPDF_PAGEOBJECT, )
FPDFTextObj_GetFont.restype = FPDF_FONT

# ./fpdf_edit.h: 1494
FPDFFont_GetBaseFontName = _libs['pdfium']['FPDFFont_GetBaseFontName']
FPDFFont_GetBaseFontName.argtypes = (FPDF_FONT, POINTER(c_char), c_size_t)
FPDFFont_GetBaseFontName.restype = c_size_t

# ./fpdf_edit.h: 1511
FPDFFont_GetFamilyName = _libs['pdfium']['FPDFFont_GetFamilyName']
FPDFFont_GetFamilyName.argtypes = (FPDF_FONT, POINTER(c_char), c_size_t)
FPDFFont_GetFamilyName.restype = c_size_t

# ./fpdf_edit.h: 1534
FPDFFont_GetFontData = _libs['pdfium']['FPDFFont_GetFontData']
FPDFFont_GetFontData.argtypes = (FPDF_FONT, POINTER(uint8_t), c_size_t, POINTER(c_size_t))
FPDFFont_GetFontData.restype = FPDF_BOOL

# ./fpdf_edit.h: 1545
FPDFFont_GetIsEmbedded = _libs['pdfium']['FPDFFont_GetIsEmbedded']
FPDFFont_GetIsEmbedded.argtypes = (FPDF_FONT, )
FPDFFont_GetIsEmbedded.restype = c_int

# ./fpdf_edit.h: 1554
FPDFFont_GetFlags = _libs['pdfium']['FPDFFont_GetFlags']
FPDFFont_GetFlags.argtypes = (FPDF_FONT, )
FPDFFont_GetFlags.restype = c_int

# ./fpdf_edit.h: 1563
FPDFFont_GetWeight = _libs['pdfium']['FPDFFont_GetWeight']
FPDFFont_GetWeight.argtypes = (FPDF_FONT, )
FPDFFont_GetWeight.restype = c_int

# ./fpdf_edit.h: 1575
FPDFFont_GetItalicAngle = _libs['pdfium']['FPDFFont_GetItalicAngle']
FPDFFont_GetItalicAngle.argtypes = (FPDF_FONT, POINTER(c_int))
FPDFFont_GetItalicAngle.restype = FPDF_BOOL

# ./fpdf_edit.h: 1589
FPDFFont_GetAscent = _libs['pdfium']['FPDFFont_GetAscent']
FPDFFont_GetAscent.argtypes = (FPDF_FONT, c_float, POINTER(c_float))
FPDFFont_GetAscent.restype = FPDF_BOOL

# ./fpdf_edit.h: 1604
FPDFFont_GetDescent = _libs['pdfium']['FPDFFont_GetDescent']
FPDFFont_GetDescent.argtypes = (FPDF_FONT, c_float, POINTER(c_float))
FPDFFont_GetDescent.restype = FPDF_BOOL

# ./fpdf_edit.h: 1620
FPDFFont_GetGlyphWidth = _libs['pdfium']['FPDFFont_GetGlyphWidth']
FPDFFont_GetGlyphWidth.argtypes = (FPDF_FONT, uint32_t, c_float, POINTER(c_float))
FPDFFont_GetGlyphWidth.restype = FPDF_BOOL

# ./fpdf_edit.h: 1633
FPDFFont_GetGlyphPath = _libs['pdfium']['FPDFFont_GetGlyphPath']
FPDFFont_GetGlyphPath.argtypes = (FPDF_FONT, uint32_t, c_float)
FPDFFont_GetGlyphPath.restype = FPDF_GLYPHPATH

# ./fpdf_edit.h: 1644
FPDFGlyphPath_CountGlyphSegments = _libs['pdfium']['FPDFGlyphPath_CountGlyphSegments']
FPDFGlyphPath_CountGlyphSegments.argtypes = (FPDF_GLYPHPATH, )
FPDFGlyphPath_CountGlyphSegments.restype = c_int

# ./fpdf_edit.h: 1654
FPDFGlyphPath_GetGlyphPathSegment = _libs['pdfium']['FPDFGlyphPath_GetGlyphPathSegment']
FPDFGlyphPath_GetGlyphPathSegment.argtypes = (FPDF_GLYPHPATH, c_int)
FPDFGlyphPath_GetGlyphPathSegment.restype = FPDF_PATHSEGMENT

# ./fpdf_edit.h: 1662
FPDFFormObj_CountObjects = _libs['pdfium']['FPDFFormObj_CountObjects']
FPDFFormObj_CountObjects.argtypes = (FPDF_PAGEOBJECT, )
FPDFFormObj_CountObjects.restype = c_int

# ./fpdf_edit.h: 1671
FPDFFormObj_GetObject = _libs['pdfium']['FPDFFormObj_GetObject']
FPDFFormObj_GetObject.argtypes = (FPDF_PAGEOBJECT, c_ulong)
FPDFFormObj_GetObject.restype = FPDF_PAGEOBJECT

# /usr/include/x86_64-linux-gnu/bits/types/time_t.h: 9
time_t = __time_t

# /usr/include/x86_64-linux-gnu/bits/types/struct_tm.h: 6
class struct_tm (Structure):
    __slots__ = ('tm_sec', 'tm_min', 'tm_hour', 'tm_mday', 'tm_mon', 'tm_year', 'tm_wday', 'tm_yday', 'tm_isdst', 'tm_gmtoff', 'tm_zone')

struct_tm._fields_ = (
    ('tm_sec', c_int),
    ('tm_min', c_int),
    ('tm_hour', c_int),
    ('tm_mday', c_int),
    ('tm_mon', c_int),
    ('tm_year', c_int),
    ('tm_wday', c_int),
    ('tm_yday', c_int),
    ('tm_isdst', c_int),
    ('tm_gmtoff', c_long),
    ('tm_zone', POINTER(c_char)),
)

# ./fpdf_ext.h: 51
class struct__UNSUPPORT_INFO (Structure):
    __slots__ = ('version', 'FSDK_UnSupport_Handler')

struct__UNSUPPORT_INFO._fields_ = (
    ('version', c_int),
    ('FSDK_UnSupport_Handler', CFUNCTYPE(UNCHECKED(None), POINTER(struct__UNSUPPORT_INFO), c_int)),
)

# ./fpdf_ext.h: 62
UNSUPPORT_INFO = struct__UNSUPPORT_INFO

# ./fpdf_ext.h: 70
FSDK_SetUnSpObjProcessHandler = _libs['pdfium']['FSDK_SetUnSpObjProcessHandler']
FSDK_SetUnSpObjProcessHandler.argtypes = (POINTER(UNSUPPORT_INFO), )
FSDK_SetUnSpObjProcessHandler.restype = FPDF_BOOL

# ./fpdf_ext.h: 79
FSDK_SetTimeFunction = _libs['pdfium']['FSDK_SetTimeFunction']
FSDK_SetTimeFunction.argtypes = (CFUNCTYPE(UNCHECKED(time_t), ), )
FSDK_SetTimeFunction.restype = None

# ./fpdf_ext.h: 89
FSDK_SetLocaltimeFunction = _libs['pdfium']['FSDK_SetLocaltimeFunction']
FSDK_SetLocaltimeFunction.argtypes = (CFUNCTYPE(UNCHECKED(POINTER(struct_tm)), POINTER(time_t)), )
FSDK_SetLocaltimeFunction.restype = None

# ./fpdf_ext.h: 113
FPDFDoc_GetPageMode = _libs['pdfium']['FPDFDoc_GetPageMode']
FPDFDoc_GetPageMode.argtypes = (FPDF_DOCUMENT, )
FPDFDoc_GetPageMode.restype = c_int

# ./fpdf_flatten.h: 38
FPDFPage_Flatten = _libs['pdfium']['FPDFPage_Flatten']
FPDFPage_Flatten.argtypes = (FPDF_PAGE, c_int)
FPDFPage_Flatten.restype = c_int

# ./fpdf_fwlevent.h: 28
enum_anon_7 = c_int

# ./fpdf_fwlevent.h: 28
FWL_EVENTFLAG_ShiftKey = (1 << 0)

# ./fpdf_fwlevent.h: 28
FWL_EVENTFLAG_ControlKey = (1 << 1)

# ./fpdf_fwlevent.h: 28
FWL_EVENTFLAG_AltKey = (1 << 2)

# ./fpdf_fwlevent.h: 28
FWL_EVENTFLAG_MetaKey = (1 << 3)

# ./fpdf_fwlevent.h: 28
FWL_EVENTFLAG_KeyPad = (1 << 4)

# ./fpdf_fwlevent.h: 28
FWL_EVENTFLAG_AutoRepeat = (1 << 5)

# ./fpdf_fwlevent.h: 28
FWL_EVENTFLAG_LeftButtonDown = (1 << 6)

# ./fpdf_fwlevent.h: 28
FWL_EVENTFLAG_MiddleButtonDown = (1 << 7)

# ./fpdf_fwlevent.h: 28
FWL_EVENTFLAG_RightButtonDown = (1 << 8)

# ./fpdf_fwlevent.h: 28
FWL_EVENTFLAG = enum_anon_7

# ./fpdf_fwlevent.h: 201
enum_anon_8 = c_int

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Back = 0x08

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Tab = 0x09

# ./fpdf_fwlevent.h: 201
FWL_VKEY_NewLine = 0x0A

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Clear = 0x0C

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Return = 0x0D

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Shift = 0x10

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Control = 0x11

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Menu = 0x12

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Pause = 0x13

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Capital = 0x14

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Kana = 0x15

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Hangul = 0x15

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Junja = 0x17

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Final = 0x18

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Hanja = 0x19

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Kanji = 0x19

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Escape = 0x1B

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Convert = 0x1C

# ./fpdf_fwlevent.h: 201
FWL_VKEY_NonConvert = 0x1D

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Accept = 0x1E

# ./fpdf_fwlevent.h: 201
FWL_VKEY_ModeChange = 0x1F

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Space = 0x20

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Prior = 0x21

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Next = 0x22

# ./fpdf_fwlevent.h: 201
FWL_VKEY_End = 0x23

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Home = 0x24

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Left = 0x25

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Up = 0x26

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Right = 0x27

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Down = 0x28

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Select = 0x29

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Print = 0x2A

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Execute = 0x2B

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Snapshot = 0x2C

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Insert = 0x2D

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Delete = 0x2E

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Help = 0x2F

# ./fpdf_fwlevent.h: 201
FWL_VKEY_0 = 0x30

# ./fpdf_fwlevent.h: 201
FWL_VKEY_1 = 0x31

# ./fpdf_fwlevent.h: 201
FWL_VKEY_2 = 0x32

# ./fpdf_fwlevent.h: 201
FWL_VKEY_3 = 0x33

# ./fpdf_fwlevent.h: 201
FWL_VKEY_4 = 0x34

# ./fpdf_fwlevent.h: 201
FWL_VKEY_5 = 0x35

# ./fpdf_fwlevent.h: 201
FWL_VKEY_6 = 0x36

# ./fpdf_fwlevent.h: 201
FWL_VKEY_7 = 0x37

# ./fpdf_fwlevent.h: 201
FWL_VKEY_8 = 0x38

# ./fpdf_fwlevent.h: 201
FWL_VKEY_9 = 0x39

# ./fpdf_fwlevent.h: 201
FWL_VKEY_A = 0x41

# ./fpdf_fwlevent.h: 201
FWL_VKEY_B = 0x42

# ./fpdf_fwlevent.h: 201
FWL_VKEY_C = 0x43

# ./fpdf_fwlevent.h: 201
FWL_VKEY_D = 0x44

# ./fpdf_fwlevent.h: 201
FWL_VKEY_E = 0x45

# ./fpdf_fwlevent.h: 201
FWL_VKEY_F = 0x46

# ./fpdf_fwlevent.h: 201
FWL_VKEY_G = 0x47

# ./fpdf_fwlevent.h: 201
FWL_VKEY_H = 0x48

# ./fpdf_fwlevent.h: 201
FWL_VKEY_I = 0x49

# ./fpdf_fwlevent.h: 201
FWL_VKEY_J = 0x4A

# ./fpdf_fwlevent.h: 201
FWL_VKEY_K = 0x4B

# ./fpdf_fwlevent.h: 201
FWL_VKEY_L = 0x4C

# ./fpdf_fwlevent.h: 201
FWL_VKEY_M = 0x4D

# ./fpdf_fwlevent.h: 201
FWL_VKEY_N = 0x4E

# ./fpdf_fwlevent.h: 201
FWL_VKEY_O = 0x4F

# ./fpdf_fwlevent.h: 201
FWL_VKEY_P = 0x50

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Q = 0x51

# ./fpdf_fwlevent.h: 201
FWL_VKEY_R = 0x52

# ./fpdf_fwlevent.h: 201
FWL_VKEY_S = 0x53

# ./fpdf_fwlevent.h: 201
FWL_VKEY_T = 0x54

# ./fpdf_fwlevent.h: 201
FWL_VKEY_U = 0x55

# ./fpdf_fwlevent.h: 201
FWL_VKEY_V = 0x56

# ./fpdf_fwlevent.h: 201
FWL_VKEY_W = 0x57

# ./fpdf_fwlevent.h: 201
FWL_VKEY_X = 0x58

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Y = 0x59

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Z = 0x5A

# ./fpdf_fwlevent.h: 201
FWL_VKEY_LWin = 0x5B

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Command = 0x5B

# ./fpdf_fwlevent.h: 201
FWL_VKEY_RWin = 0x5C

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Apps = 0x5D

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Sleep = 0x5F

# ./fpdf_fwlevent.h: 201
FWL_VKEY_NumPad0 = 0x60

# ./fpdf_fwlevent.h: 201
FWL_VKEY_NumPad1 = 0x61

# ./fpdf_fwlevent.h: 201
FWL_VKEY_NumPad2 = 0x62

# ./fpdf_fwlevent.h: 201
FWL_VKEY_NumPad3 = 0x63

# ./fpdf_fwlevent.h: 201
FWL_VKEY_NumPad4 = 0x64

# ./fpdf_fwlevent.h: 201
FWL_VKEY_NumPad5 = 0x65

# ./fpdf_fwlevent.h: 201
FWL_VKEY_NumPad6 = 0x66

# ./fpdf_fwlevent.h: 201
FWL_VKEY_NumPad7 = 0x67

# ./fpdf_fwlevent.h: 201
FWL_VKEY_NumPad8 = 0x68

# ./fpdf_fwlevent.h: 201
FWL_VKEY_NumPad9 = 0x69

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Multiply = 0x6A

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Add = 0x6B

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Separator = 0x6C

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Subtract = 0x6D

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Decimal = 0x6E

# ./fpdf_fwlevent.h: 201
FWL_VKEY_Divide = 0x6F

# ./fpdf_fwlevent.h: 201
FWL_VKEY_F1 = 0x70

# ./fpdf_fwlevent.h: 201
FWL_VKEY_F2 = 0x71

# ./fpdf_fwlevent.h: 201
FWL_VKEY_F3 = 0x72

# ./fpdf_fwlevent.h: 201
FWL_VKEY_F4 = 0x73

# ./fpdf_fwlevent.h: 201
FWL_VKEY_F5 = 0x74

# ./fpdf_fwlevent.h: 201
FWL_VKEY_F6 = 0x75

# ./fpdf_fwlevent.h: 201
FWL_VKEY_F7 = 0x76
